# Quake

./: .gitignore  Dockerfile  Dockerfile.dist  Dockerfile.dockerignore  Dockerfile.nginx  Dockerfile.nginx.dockerignore  Dockerfile.node  Dockerfile.node.dockerignore  Dockerfile.ws-server  README.md  build-docker.sh  build-native.sh  build-wasm.sh  index.html  nginx-default.conf  package-docker.sh  package-native.sh  package-wasm.sh  run-docker.sh  run-native.sh  run-wasm.sh  test.sh  watch-build-docker.sh  watch-build-native.sh  watch-build-wasm.sh  watch-test.sh
WinQuake/: CMakeLists.txt  adivtab.h  anorm_dots.h  anorms.h  asm_draw.h  asm_i386.h  block16.h  block8.h  bspfile.h  cd_audio.c  cd_linux.c  cd_null.c  cd_win.c  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  conproc.c  console.c  console.h  crc.c  cvar.c  cvar.h  d_edge.c  d_fill.c  d_iface.h  d_ifacea.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  (+154 more)
WinQuake/gas2masm/: gas2masm.c
WinQuake/id1/: autoexec.cfg  config.cfg  progs.lno
WinQuake/id1/maps/: e1m1.way  e1m3.wa1  e1m3.way  e1m4.wa1  e1m4.way  e1m5.wa1  e1m5.way  e1m6.way  e1m7.way  e2m1.wa1  e2m1.way  e2m2.wa1  e2m2.way  e2m3.wa1  e2m3.way  e2m4.wa1  e2m4.wa2  e2m4.way  e2m5.wa1  e2m5.wa2  e2m5.way  e2m6.wa1  e2m6.way  e2m7.wa1  e2m7.way  e3m1.wa1  e3m1.way  e3m2.wa1  e3m2.way  e3m3.way  e3m4.wa1  e3m4.way  e3m5.wa1  e3m5.way  e3m6.wa1  e3m6.way  e3m7.wa1  e3m7.way  e4m1.wa1  e4m1.way  (+18 more)
WinQuake/id1/progs/src/: COPYING  README.md  ai.qc  client.qc  combat.qc  defs.qc  doors.qc  enforcer.qc  fight.qc  items.qc  misc.qc  monsters.qc  ogre.qc  oldone.qc  player.qc  progs.src  subs.qc  triggers.qc  weapons.qc  wizard.qc  world.qc
WinQuake/id1/progs/src/frikbot/: bot.qc  bot_ai.qc  bot_ed.qc  bot_fight.qc  bot_misc.qc  bot_move.qc  bot_phys.qc  bot_qw.qc  bot_way.qc
WinQuake/websockets/: test_websockets.c  websockets.c  websockets.h
ws-server/: go.mod  main.go
